--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "nodemailer": "^6.10.1"
-  },
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.6.1",
+  "express": "^4.18.2",
+  "jsonwebtoken": "^9.0.0",
+  "mongoose": "^7.0.0",
+  "resend": "^3.5.0"
+},
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
